[package]
    edition = "2021"
    name = "teleinfo2mqtt-rs"
    repository = "https://github.com/angristan/teleinfo2mqtt-rs"
    version = "0.1.0"

    # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    aimeqtt = { git = "https://github.com/angristan/aimeqtt", rev = "846d01f" }
    async-stream = "0.3.5"
    bincode = "1.3.3"
    futures-util = "0.3.30"
    rumqttc = "0.24.0"
    serde = { version = "1.0.197", features = ["derive"] }
    serialport = "4.3.0"
    tokio = { version = "1", features = ["rt-multi-thread"] }

# The profile that 'cargo dist' will build with
[profile.dist]
    inherits = "release"
    lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
    # The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
    cargo-dist-version = "0.12.0"
    # CI backends to support
    ci = ["github"]
    # The installers to generate for each app
    installers = []
    # Target platforms to build apps for (Rust target-triple syntax)
    targets = ["aarch64-unknown-linux-gnu"]
    # Publish jobs to run in CI
    pr-run-mode = "plan"
