[package]
    edition = "2021"
    name = "teleinfo2mqtt-rs"
    version = "0.1.0"

    # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    aimeqtt = { git = "https://github.com/angristan/aimeqtt" }
    # aimeqtt = { path = "../aimeqtt" }
    async-stream = "0.3.5"
    futures-util = "0.3.32"
    rppal = "0.22.1"
    serde_json = "1"
    tokio = { version = "1", features = ["rt-multi-thread"] }
    tracing = "0.1"
    tracing-subscriber = "0.3"
